--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: cursive;
   border: solid black;
   border:0px 2px 0px 2px;
   padding-left: 15px;
@@ -59,11 +59,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: default;
 }
 .main-text-container p {
   color:white;
   font-size: 60px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: cursive;
 }
 #image-container {
   width: 100%;
@@ -82,7 +83,8 @@ body {
   color: white;
   text-align: center;
   font-size: 55px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: cursive;
+  cursor: default;
 }
 #popular-movies-container {
   display: flex;
@@ -98,7 +100,8 @@ body {
   color: white;
   text-align: center;
   font-size: 30px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: cursive;
+  cursor: default;
 }
 #icon-container {
   display: flex;
@@ -127,4 +130,38 @@ body {
 #youtube {
   color:red;
   background:white
+}
+#support-container {
+  padding-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#support-container h1 {
+  font-size:75px;
+  font-family:cursive;
+  color:white;
+  cursor: default;
+}
+.input-box input {
+  height: 30px;
+  width: 400px;
+  font-size: 15px;
+}
+.input-box i {
+  color: white;
+}
+#question-box {
+  text-align:left;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  padding-bottom:150px;
+  font-size:15px;
+}
+#send-button {
+  width: 404px;
+  cursor:pointer;
 }
